[project]
name = "queuectl"
version = "0.1.0"
description = ""
authors = [
    {name = "vishnu2k5", email = "mvishnuvardhan156@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0,<9.0.0",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "sqlalchemy (==2.0.0)",
    "sqlite-utils (>=3.38,<4.0)",
    "psutil (>=7.1.3,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




[tool.poetry.scripts]
queuectl = "queuectl.cli:cli"
queuectl-show = "queuectl.show:show"


[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
